--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,11 @@ server:
   port: 8080
 
 spring:
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/Demo
   datasource:
-    url: jdbc:mysql://localhost:3306/projectdb
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/pdfconvert
     username: root
     password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
